<resources>
    <string name="app_name">School Scheduler</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="calender_nav">Calender</string>
    <string name="tasks_nav">Tasks</string>
    <string name="subjects_nav">Subjects</string>
    <string name="frag_num">Fragment #</string>
    <string name="subjects_title">SUBJECTS</string>
    <string name="tasks_title">TASKS</string>
    <string name="calender_title">CALENDER</string>
    <string name="nav_grades">Grades</string>
    <string name="nav_notes">Notes</string>
    <string name="subject_title">Subject Title</string>
    <string name="title_hint">title</string>
    <string name="subject_teacher">Teacher</string>
    <string name="teacher_hint">teacher</string>
    <string name="no_subjects">No Subjects</string>
    <string name="room_text">Room</string>
    <string name="room_hint">room</string>
    <string name="select_color">Select Color</string>
    <string name="string_add">ADD</string>
    <string name="delete_string">DELETE</string>
    <string name="close_string">CLOSE</string>
    <string name="save_string">Save</string>
    <string name="action_delete">Delete</string>
    <string name="course_name">Course Name</string>
    <string name="edit_sub_button">EDIT</string>
    <string name="pick_a_color_string">pick a color</string>
    <string name="rrggbb" translatable="false">RRGGBB</string>
    <string name="hex" translatable="false">HEX:</string>
    <string name="transparency">Transparency</string>
    <string name="press_to_record">Press To Record</string>
    <string name="no_recordings">No Recordings</string>
    <string name="length_string">00:00</string>
    <string name="default_file_name">My Recording</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="wav_string">.wav</string>
    <string name="dialog_title_rename">Rename File</string>

    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="start_time_string">Start Time</string>
    <string name="end_time_string">End Time</string>
    <string name="till_append_string">till</string>
    <string name="pick_a_day_string">Pick a day</string>
    <string name="day_of_the_week_string">day of the week</string>
    <string name="pick_a_time_string">pick a time</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>

    <string name="action_month_view">M</string>
    <string name="str_calendar">Calendar</string>
    <string name="email_string_hint">Email</string>
    <string name="forgot_password_string">Forgot Password</string>
    <string name="confirm_password_hint">Confirm Password</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="login_button_string">Login</string>
    <string name="logout_action_view">Logout</string>
    <string name="assignment_title">Assignment Title</string>
    <string name="due_date_string">Due Date</string>
    <string name="date_hint">date</string>
    <string name="subject_string">Subject</string>
    <string name="subject_hint">subject</string>
    <string name="add_a_note_hint">Add a note</string>
    <string name="no_agendas_string">No Agendas</string>
    <string name="no_events_string">No Events</string>
    <string name="notification_string">Notification:</string>
    <string name="no_notes_saved_string">No Notes Saved</string>
    <string name="attachment_string">Attachment</string>
    <string name="share_string">Share</string>
    <string name="enable_checklist_string">Enable checklist</string>
    <string name="disable_checklist_string">Disable checklist</string>
    <string name="trash_string">Trash</string>
    <string name="restore_trash_string">Restore from trash</string>
    <string name="title_note_string">Title</string>
    <string name="content_hint_string">Content</string>
    <string name="add_reminder_hint">Add reminder</string>
    <string name="stroke_string">Stroke</string>
    <string name="stroke_size_string">Stroke size</string>
    <string name="creation">Created:</string>
    <string name="last_update">Updated:</string>
    <string name="storage_not_available">Storage note available</string>
    <string name="gallery">Gallery</string>
    <string name="share">Share</string>
    <string name="note_thumbnail">note thumbnail</string>
    <string name="menu_completed">Completed</string>
    <string name="menu_edit">Edit</string>
    <string name="finished_string">Finished</string>
    <string name="not_completed_string">Not Completed</string>
    <string name="not_completed">Not Completed</string>
    <string name="menu_nav_settings">Settings</string>
    <string name="today_string">Today</string>
    <string name="school_scheduler_string">School Scheduler</string>
    <string name="recordings_nav_string">Recordings</string>
    <string name="events_string">Events</string>
    <string name="overview_string">Overview</string>
    <string name="assignments_string">Assignments</string>
    <string name="no_assignments_string">No Assignments</string>

    <string name="dummy_text1">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</string>
    <string name="view_more">View More</string>
    <string name="more_info_string">More Info</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="assignment_string">Assignment</string>
    <string name="title_string">Title</string>
    <string name="keep_checked_items_string">Keep checked items</string>
    <string name="keep_check_marks_string">Keep check marks</string>
    <string name="checklist_item_hint">New item</string>

    <!--Settings -->
    <string name="settings">Settings</string>
    <string name="settings_screen_user">User Settings</string>
    <string name="settings_screen_general">General Settings</string>
    <string name="settings_screen_notifications">Notifications Settings</string>
    <string name="settings_screen_notes">Note Settings</string>
    <string name="settings_checklist">Checklist Settings</string>
    <string name="days_of_the_week_string">Days of The Week</string>
    <string name="weekly_schedule_string">Weekly Schedule</string>
    <string name="add_to_timetable_string">Add to Timetable</string>
    <string name="action_month_view_string">Month View</string>
    <string name="details_string">Details</string>
    <string name="schedule_string">Schedule</string>
    <string name="time_to_notify_string">Time to notify</string>
    <string name="day_to_notify_string">Day to notify</string>
    <string name="add_reminder_string">Add reminder</string>
    <string name="repeat_string">Repeat</string>
    <string name="never_string">Never</string>
    <string name="overdue_string">OVERDUE!</string>
    <string name="none_string">None</string>
    <string name="ten_min_before_string">10 mins before</string>
    <string name="thirty_min_before_string">30 mins before</string>
    <string name="one_hour_before_string">1 hour before</string>
    <string name="one_day_before_string">1 day before</string>
    <string name="one_week_before_string">1 week before</string>
    <string name="due_today_string">Due today!</string>
    <string name="timetable_string">Timetable</string>
</resources>
