<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:title="@string/save_string"
        android:icon="@drawable/ic_done"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_attachment"
        android:icon="@drawable/ic_attachment_white_24dp"
        android:orderInCategory="100"
        android:title="@string/attachment_string"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="200"
        android:title="@string/share_string"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_checklist_on"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
        android:orderInCategory="300"
        android:title="@string/enable_checklist_string"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_checklist_off"
        android:icon="@drawable/ic_file_document_box_white_48dp"
        android:orderInCategory="400"
        android:title="@string/disable_checklist_string"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_trash"
        android:orderInCategory="500"
        android:title="@string/trash_string"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_untrash"
        android:icon="@drawable/ic_undelete_white_24dp"
        android:orderInCategory="600"
        android:title="@string/restore_trash_string"
        android:visible="false"
        app:showAsAction="ifRoom"/>

</menu>