<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_timetable_blackvector_24dp"
            android:title="@string/timetable_string" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_assessment_blackvector_24dp"
            android:title="@string/nav_grades" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_photo_library_blackvector_24dp"
            android:title="@string/nav_notes" />
        <item
            android:id="@+id/nav_recordings"
            android:icon="@drawable/ic_mic_blackvector_24dp"
            android:title="@string/recordings_nav_string"/>

    </group>

    <group
        android:id="@+id/nav_menu_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_blackvector_24dp"
            android:title="@string/menu_nav_settings"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_blackvector_24dp"
            android:title="@string/logout_action_view"/>

    </group>

</menu>
