<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include layout="@layout/toolbar_main"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/subject_title"
                style="@style/CategoryStyle"/>

            <LinearLayout
                style="@style/LinearStyle">

                <EditText
                    android:id="@+id/edit_timetable_name"
                    style="@style/EditorFieldStyle"
                    android:fontFamily="sans-serif"
                    android:hint="@string/title_hint"
                    android:inputType="textCapWords" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/pick_a_day_string"/>

            <LinearLayout
                style="@style/LinearStyle">

                <TextView
                    android:id="@+id/edit_timetable_day"
                    style="@style/EditorFieldStyle"
                    android:layout_marginTop="6dp"
                    android:drawableBottom="@drawable/line"
                    android:fontFamily="sans-serif"
                    android:hint="@string/day_of_the_week_string" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/room_text"/>

            <LinearLayout
                style="@style/LinearStyle">

                <EditText
                    android:id="@+id/room_timetable"
                    style="@style/EditorFieldStyle"
                    android:ems="10"
                    android:fontFamily="sans-serif"
                    android:hint="@string/room_hint"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/start_time_string"/>

            <LinearLayout
                style="@style/LinearStyle"
                android:orientation="horizontal"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/timetable_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:drawableBottom="@drawable/line"
                    android:gravity="bottom"
                    android:hint="@string/pick_a_time_string"
                    android:onClick="showStartTime"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/LightGrey" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/end_time_string" />

            <LinearLayout
                style="@style/LinearStyle"
                android:orientation="horizontal"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/timetable_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:drawableBottom="@drawable/line"
                    android:gravity="bottom"
                    android:hint="@string/pick_a_time_string"
                    android:onClick="showEndTime"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/timetable_view_color"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/circle"/>

            <Button
                android:id="@+id/timetable_create_color"
                android:layout_height="60dp"
                android:layout_width="100dp"
                android:layout_marginStart="65dp"
                android:text="@string/pick_a_color_string"/>


        </LinearLayout>

    </LinearLayout>
</RelativeLayout>