<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="45dp"
            android:background="@color/LightGrey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_schedule_blackvector_24dp"/>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                style="@style/LinearStyle">

                <TextView
                    android:id="@+id/assign_time_to_notify"
                    style="@style/EditorFieldStyle"
                    android:text="@string/time_to_notify_string"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="12dp"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="45dp"
            android:background="@color/LightGrey"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_today_blackvector_24dp"/>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                style="@style/LinearStyle">

                <TextView
                    android:id="@+id/assign_day_to_notify"
                    style="@style/EditorFieldStyle"
                    android:text="@string/day_to_notify_string"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="12dp"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="45dp"
            android:background="@color/LightGrey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_notifications_blackvector_24dp"/>

            <LinearLayout
                android:background="?attr/selectableItemBackground"
                style="@style/LinearStyle">

                <TextView
                    android:id="@+id/assign_add_reminder"
                    style="@style/EditorFieldStyle"
                    android:text="@string/add_reminder_string"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="12dp"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="45dp"
            android:background="@color/LightGrey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_repeat_blackvector_24dp"/>

            <LinearLayout
                android:id="@+id/assign_repeat_container"
                android:background="?attr/selectableItemBackground"
                style="@style/LinearStyle">

                <TextView
                    style="@style/EditorFieldStyle"
                    android:text="@string/repeat_string"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="12dp"/>

                <TextView
                    android:id="@+id/assign_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/never_string"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="6dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>